[#282] groovc invocation